--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 </div>
 
 <div class="select-section">
-    <button class="button select-section__button" id="btn1" onclick="activeBtn(1)">Ремонтируемые устройства</button>
-    <button class="button select-section__button" id="btn2" onclick="activeBtn(2)">Дополнительные услуги</button>
-    <button class="button select-section__button" id="btn3" onclick="activeBtn2()">Цены на услуги</button>
-    <button class="button select-section__button" id="btn4" onclick="activeBtn3()">Специальные цены</button>
-    <button class="button select-section__button" id="btn5" onclick="activeBtn4()">Отзывы</button>
+    <button class="button select-section__button" id="btn1">Ремонтируемые устройства</button>
+    <button class="button select-section__button" id="btn2">Дополнительные услуги</button>
+    <button class="button select-section__button" id="btn3">Цены на услуги</button>
+    <button class="button select-section__button" id="btn4">Специальные цены</button>
+    <button class="button select-section__button" id="btn5">Отзывы</button>
 </div>
 
     <div class="wrapper-test">
